fix scroll issue on small screens

--- a/src/main.css
+++ b/src/main.css
@@ -33,7 +33,6 @@
 	.fc-toolbar .fc-left,
 	.fc-toolbar .fc-center {
 		float: inherit;
-		margin-bottom: 10px;
 		display: block;
 	}
 	.fc .fc-toolbar > * > * {
